@@ -31,7 +31,11 @@
          * Display message about invalid/insufficient credentional
          */
         public function onZMInsufficientCredentials($args) {
-            ZMMessages::instance()->warn(sprintf(_zm('You are not allowed to access the page with id: <em>%s</em>'), $args['request']->getRequestId()));
+            $request = $args['request'];
+            if (null != $request->getUser()) {
+                // only if we still have a valid session
+                ZMMessages::instance()->warn(sprintf(_zm('You are not allowed to access the page with id: <em>%s</em>'), $request->getRequestId()));
+            }
         }
 
         /**
