@@ -63,8 +63,7 @@ class Request extends ZMRequest {
         if (null == ($selectedLanguageId = $this->getParameter('languageId'))) {
             // fallback to session
             if (null == ($selectedLanguageId = $this->getSession()->getValue('languages_id'))) {
-                //todo: this should be store language??
-                $selectedLanguageId = 1;
+                $selectedLanguageId = ZMSettings::get('storeDefaultLanguageId');
             }
         }
 
@@ -85,26 +84,6 @@ class Request extends ZMRequest {
         }
 
         return false;
-    }
-
-    /**
-     * Get the category path arry.
-     *
-     * @return array The current category path broken into an array of category ids.
-     */
-    public function getCategoryPathArray() {
-        $path = $this->getParameter('cPath');
-        $cPath = array();
-        if (null !== $path) {
-            $path = explode('_', $path);
-            foreach ($path as $categoryId) {
-                $categoryId = (int)$categoryId;
-                if (!in_array($categoryId, $cPath)) {
-                    $cPath[] = $categoryId;
-                }
-            }
-        }
-        return $cPath;
     }
 
 }
