@@ -100,4 +100,24 @@ class ZMToolboxAdmin2 extends ZMToolboxTool {
         return $view;
     }
 
+    /**
+     * Get the category path arry.
+     *
+     * @return array The current category path broken into an array of category ids.
+     */
+    public function getCategoryPathArray() {
+        $path = $this->getRequest()->getParameter('cPath');
+        $cPath = array();
+        if (null !== $path) {
+            $path = explode('_', $path);
+            foreach ($path as $categoryId) {
+                $categoryId = (int)$categoryId;
+                if (!in_array($categoryId, $cPath)) {
+                    $cPath[] = $categoryId;
+                }
+            }
+        }
+        return $cPath;
+    }
+
 }
