@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sample App</title>
+    <title><?php _vzm('Sample App') ?></title>
     <?php $resources->cssFile('css/style.css') ?>
     <?php $resources->jsFile('js/validation.js') ?>
   </head>
