@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sample App</title>
+    <title><?php _vzm('Sample App') ?></title>
     <?php $resources->cssFile('css/style.css') ?>
   </head>
   <body>
-    <h1>This is the ZenMagick MVC sample application</h1>
-    <p><a href="<?php echo $request->url('index') ?>">Home</a></p>
+    <h1><?php _vzm('This is the ZenMagick MVC sample application') ?></h1>
+    <p><a href="<?php echo $request->url('index') ?>"><?php _vzm('Home') ?></a></p>
   </body>
 </html
