@@ -159,6 +159,7 @@ Release 0.9.10
   options; if multiple is set, default to 'select'
 - add ZMUserRoleSacsHandler and ZMUserRoleCredentials to mvc and user in admin
 - add ZMCoupons::getCoupons() method
+- add generic yaml based  ZMLocale implementation - ZMYamlLocale
 
 Release 0.9.9
 - in ZMDbTableMapper handle database exception building auto mappings
